# Polaris-dotfiles

./: CMakeLists.txt  README.md  install.sh
dotfiles/fastfetch/: config.jsonc
dotfiles/kitty/: kitty.conf
dotfiles/mako/: config
modules/launcher/qml/: main.qml
modules/launcher/qml/components/: AppLauncher.qml
modules/launcher/src/: appmodel.cpp  appmodel.h  main.cpp
modules/osd/: CMakeLists.txt
modules/osd/qml/: main.qml
modules/osd/src/: main.cpp
modules/settings/: CMakeLists.txt
modules/settings/qml/: main.qml
modules/settings/qml/components/: WifiButton.qml
modules/settings/src/: main.cpp
modules/taskbar/: CMakeLists.txt
modules/taskbar/qml/: main.qml
modules/taskbar/qml/components/: Battery.qml  Clock.qml
modules/taskbar/src/: battery.cpp  battery.h  clock.cpp  clock.h  main.cpp
modules/wallpaper/: CMakeLists.txt
modules/wallpaper/qml/: main.qml
modules/wallpaper/src/: main.cpp  wallpaperdaemon.cpp  wallpaperdaemon.h  wallpapermanager.cpp  wallpapermanager.h
shared/: CMakeLists.txt
shared/hardware/: hardwareInterface.cpp  hardwareInterface.h
shared/qml/: Theme.qml
